index.css
* {
    box-sizing: border-box !important;
    outline: 0 !important;
}

html,
body {
    margin: 0;
    padding: 0;
    background: #fff;
    color: #000;
    font-family: sourced-roboto;
    scroll-behavior: smooth;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
    margin: 0;
    padding: 0;
}

.wrapper {
    width: 800px;
    margin: auto;
}

/* ================= fontface ================= */
@font-face {
    font-family: sourced-roboto;
    src: url("/font/roboto.ttf") format("truetype");
}

/* ================= navbar ================= */
#navbar,
#footer {
    background: #444;
    width: 100%;
    height: 48px;
    font-size: 1.2em;
    text-align: center;
    border-bottom: 4px solid #f60;
    overflow: hidden;
    color: #fff;
}

#navbar a {
    color: #fff;
    display: inline-block;
    margin: 0 .3em;
    height: 100%;
    background: rgb(255, 255, 255, .1);
    text-decoration: none;
    padding: 0 .8em;
    line-height: 220%;
    perspective: 900px;
    border: 2px solid rgb(0, 0, 0, 0);
}

#navbar a:hover {
    background: rgb(255, 255, 255, .2);
    border-top-color: #f60;
    border-right-color: #f60;
    border-left-color: #f60;
    border-style: solid;
}

/* ================= header ================= */
#header {
    background: #555;
    background-image: url("/img/header-blur.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    width: 100%;
    color: #fff;
    text-align: center;
    font-size: 1.6em;
}

#header .image,
#header .text,
#header .video {
    padding-top: 1.4em;
}

#header .video {
    padding-bottom: 1.4em;
}

#header .text p {
    line-height: 1.5em;
}

#header video {
    width: 640px;
    height: 360px;
    border: 0;
    transform: translateZ(0);
    border-radius: 8px;
    overflow: hidden;
}

/* ================= footer ================= */
#footer {
    border-top: 4px solid #f60;
    border-bottom: none;
    line-height: 450%;
    height: 96px;
}

#footer a {
    color: #fff;
}

/* ================= section ================= */
.section {
    background: #eee;
    padding: 2em;
}

.section .heading {
    font-size: 1.8em;
    font-weight: bold;
    text-align: center;
    margin: .5em 0 1em 0;
}

.section .text {
    font-size: 1.6em;
}

.section-separator {
    background: #444;
    width: 100%;
    height: 32px;
    border-top: 4px solid #f60;
}

.review-separator {
    background: #bbb;
    width: 100%;
    height: 4px;
    margin: 1em 0;
}

.review {
    width: 100%;
}

.review .image {
    width: 48px;
    height: 48px;
    overflow: hidden;
    display: inline-block;
    margin-right: 8px;
    margin-top: 4px;
    border-radius: 13%;
    float: left;
}

.review .image img {
    width: 48px;
}

.review .right {
    width: calc(100% - 64px);
    height: 100%;
    display: inline-block;
}

.review .right .name {
    font-weight: bold;
}

/* ================= media rules ================= */
@media screen and (max-width: 800px) {
    .wrapper {
        width: auto;
    }

    #navbar a {
        margin: 0;
        padding: 0;
        width: 32%;
    }

    #header {
        font-size: 1.2em;
    }

    #header video {
        width: 90%;
        height: auto;
    }
}

